--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <jakarta.servlet-api.version>.</jakarta.servlet-api.version>
         <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
         <logback-classic.version>1.2.11</logback-classic.version>
+        <gson.version>2.9.0</gson.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,12 @@
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0${jakarta.servlet-api.version}0</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
     </dependencies>
